--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 	<div class="span10">
       <!--Body content--><script src="http://feeds.feedburner.com/anil-labs?format=sigpro" type="text/javascript" ></script>
     </div>
-    <div class="span10">Anil Kumar Panigrahi</div>
+    <div class="span2"></div>
+    <div class="span10"><h1>Anil Kumar Panigrahi's Blog</h1></div>
   </div>
 </div>
     
