--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Anil Labs</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="http://anillabs.github.com/css/bootstrap.css" rel="stylesheet">
 
     <!-- Add custom CSS here -->
     <style>
