--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Anil Kumar Panigrahi - Developer,Blogger and Founder of Anil Labs">
+    <meta name="description" content="Anil Kumar Panigrahi - Developer,Blogger and Founder of Anil Labs ( http://www.anil2u.info )">
     <meta name="author" content="Anil Kumar Panigrahi">
 
     <title>Anil Labs</title>
