--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
     <style>
 	body {margin-top: 60px;}
 	</style>
-	
+    <script>
+    	$('.carousel').carousel({
+  		interval: 2000
+	});
+    	
+    </script>	
      
 
   </head>
