--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
-
+    
+    <script src="js/bootstrap-carousel.js"></script>
     <!-- Add custom CSS here -->
     <style>
 	body {margin-top: 60px;}
