--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <!-- Add custom CSS here -->
     <style>
 	body {margin-top: 60px;}
-	
+	.carousel-indicators li { border: 1px solid #000000;}
+	.carousel-indicators .active { background-color: #000000;}
 	</style>
     <script>
     	$('.carousel').carousel({
@@ -92,8 +93,7 @@
    
   </div>
   <!-- Carousel nav -->
-  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+  
   
 </div>
 
