--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </nav>
 
     <div class="container">
-      
+      <div class="row">
       <div class="col-lg-7">
           <img class="img-responsive img-rounded" src="https://farm8.staticflickr.com/7650/17028576735_1a55bb644a_o.jpg" alt="How to implement CMS application with SEO friendly URLs in CakePHP by Anil Kumar Panigrahi">
         </div>
