--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class="row">
        <div class="col-lg-7">
           <h2>Anil Kumar Panigrahi's Blog</h2>
-          <script src="http://feeds.feedburner.com/anil-labs?format=sigpro" type="text/javascript" ></script>
+          <script src="//feeds.feedburner.com/anil-labs?format=sigpro" type="text/javascript" ></script>
        </div>
        <div class="col-lg-5">
         <iframe src="//player.vimeo.com/video/73140367" width="500" height="282" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/73140367">Google Drive as free CDN to your website by Anil Kumar Panigrahi</a> from <a href="http://vimeo.com/anilkumarpanigrahi">Anil Kumar Panigrahi</a> .</p>
