--- a/index.html
+++ b/index.html
@@ -75,7 +75,26 @@
       <div class="row">
        <div class="col-lg-7">
           <h2>Anil Kumar Panigrahi's Blog</h2>
-          <script src="//feeds.feedburner.com/anil-labs?format=sigpro" type="text/javascript" ></script>
+          <script>
+        // URL of your FeedBurner RSS feed
+        var feedUrl = "https://feeds.feedburner.com/anil-labs";
+        
+        // Function to fetch and display the feed content
+        function displayFeed() {
+            fetch(feedUrl)
+                .then(response => response.text())
+                .then(data => {
+                    var feedContent = document.getElementById("feed-content");
+                    feedContent.innerHTML = data;
+                })
+                .catch(error => {
+                    console.error('Error fetching feed:', error);
+                });
+        }
+        
+        // Call the function to display the feed content
+        displayFeed();
+    </script>
        </div>
        <div class="col-lg-5">
         <iframe src="//player.vimeo.com/video/73140367" width="500" height="282" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/73140367">Google Drive as free CDN to your website by Anil Kumar Panigrahi</a> from <a href="http://vimeo.com/anilkumarpanigrahi">Anil Kumar Panigrahi</a> .</p>
